Set up fonts and colours in fonts.scss and color.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,14 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+h1, h2, h3, h4, h5 {
+font-family: $titles-font;
+color: $black-green;
+}
+
+p {
+font-family: $body-font;
+color: $black-green;
+}
+
