--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #FD1015;
-$blue: #167FFB;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$white-green: #f4f7f6;
+$black-green: #000503;
+
+$light-gray: #CADADB;
+$dark-gray: #555555;
+
+$light-green: #0fe07f;
+$mid-green: #247a52;
+$dark-green: #042e1a;
