--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="slogan-text">
+    EASY 
+  </div>
+  <div class="slogan-text">
+    PLANT
+  </div>
+  <div class="slogan-text">
+    CARING 
+  </div>
+</div>
