--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,5 @@
 // Define variables for your color scheme
 
-// For example:
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
@@ -8,3 +7,21 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$white: #FFFFFF;
+$lightblue: #128496;
+$lightorange: #fcac7c;
+$pcolor: #696c74;
+$bookingcard: #F1D6C8;
+$linecolor: #DEE2E6;
+
+// My chinampa colours
+
+$white-green: #f4f7f6;
+$black-green: #000503;
+
+$light-gray-green: #CADADB;
+$dark-gray-green: #555555;
+
+$light-green: #0fe07f;
+$mid-green: #247a52;
+$dark-green: #042e1a;
