--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,25 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/banner";
+@import "components/footer";
+
+h1, h2, h3, h4, h5 {
+  font-family: $titles;
+  color: $black-green;
+}
+
+p {
+font-family: $paragraphs;
+color: $dark-gray-green;
+}
+
+a {
+  font-family: $links;
+  color: $dark-gray-green;
+}
+
+a:hover {
+  text-decoration: none;
+  color: $light-green;
+}
