--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,30 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.navbar-inverse {
+height: 80px;  
+margin-bottom: 0px;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-title {
+  font-family: $titles;
+  font-size: 45px;
+  color: $black-green;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-button {
+  background: $dark-gray-green;
+  color: $white-green;
+  transition: background 0.3s ease;
+  padding: 8px 24px;
+  width: 120px;
+  height: 72px;
+  margin-bottom: 1px;
+  border-radius: 1%;
+}
+
+.navbar-button:hover {
+  background: $mid-green;
+  color: white;
+}
+
+.navbar-links {
+  font-family: $links;
 }
