--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container mt-4">
+<div class="container mt-4 p-4">
   <div class="d-flex flex-row bd-highlight justify-content-between">
     <div class="m-4 bd-highlight"> <h1>My catalogue</h1></div>
     <div class="m-4 bd-highlight"><%= link_to "ADD A PLANT", new_user_plant_path, class: "btn mb-2" %></div>
@@ -10,13 +10,20 @@
 <div class="container">
   <div class="row">
     <% @user_plants.each do |plant| %>
-       <div class="col-4">
-        <%= link_to plant do %>
+       <div class="col-4 mb-4">
+        <%= link_to plant, class: "card_link" do %>
           <div class="card myplantcard">
             <% if plant.photo.present?  %>
-              <%= cl_image_tag plant.photo.key, crop: :fill %>
+              <%= cl_image_tag plant.photo.key %>
             <% end %>
-            <%= plant.nickname %>
+            <div class="text p-3">
+              <h4><%= plant.nickname.upcase %></h4>
+              <p><%= plant.family.name %></p>
+              <div class="d-flex icone">
+                <div class="bd-highlight mr-2"><i class="fas fa-tint">  Every <%= plant.plant.water_frequency %> days</i></div>
+                <div class="bd-highlight"><i class="fas fa-sun">  <%= plant.plant.light_frequency %>h/day</i></div>
+              </div>
+            </div>
           </div>
         <% end %>
         </div>
