--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,7 @@
 .banner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   background-image:
   linear-gradient(to bottom, rgba(20, 238, 38, 0.082), rgba(17, 68, 10, 0.205)),  
   url('https://images.unsplash.com/photo-1514192497895-875274f82835?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
@@ -16,7 +19,7 @@
   font-weight: 1000;
   font-size: 75px; 
   padding-top: 15px;
-  padding-left: 150px;
+  padding-left: 5px;
 }
 
 .slogan-text-2 {
@@ -27,5 +30,5 @@
   font-size: 60px;
   padding-bottom: 90px; 
   line-height: 50px;
-  padding-left: 150px;
+  padding-left: 20px;
 }
