adding the search bar

--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -3,7 +3,21 @@
   <div class="d-flex flex-row bd-highlight justify-content-between">
     <div class="m-4 bd-highlight"> <h1>My catalogue</h1></div>
     <div class="m-4 bd-highlight"><%= link_to "ADD A PLANT", new_user_plant_path, class: "btn mb-2" %></div>
-    <div class="m-4 bd-highlight flex-grow-1 ">HERE THE SEARCH BAR</div>
+    <div class="m-4 bd-highlight flex-grow-1 ">
+
+    <!-- search form -->
+    <div class="d-flex ml-4">
+      <div class="flex-fill bd-highligh mr-2">
+        <%= form_tag user_plants_path, method: :get do %>
+          <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find you plant"
+          %></div>
+      <div><%= submit_tag "Search", class: "btn btn-primary" %></div>
+      <% end %>
+    </div>
+    </div>
   </div>
 </div>
 
