--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-inverse {
-height: 80px;  
+height: 80px;
 margin-bottom: 0px;
 }
 
@@ -27,4 +27,10 @@ margin-bottom: 0px;
 
 .navbar-links {
   font-family: $links;
+}
+
+.plantsnavbar {
+  font-size: 12px;
+  border-radius: 90px;
+  height: 40px;
 }
