--- a/app/views/user_plants/show.html.erb
+++ b/app/views/user_plants/show.html.erb
@@ -1,3 +1,3 @@
-<p>This is where the user can actually see his/her plants</p>
+<p>This is where the user can actually see one particular plant</p>
 
 
