adding the show for user_plant

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -22,3 +22,13 @@
 .i {
   font-family: $paragraphs;
 }
+
+.reminders-big-card {
+  background: white;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.2);
+  &:hover {
+    text-decoration: none !important;
+  }
+}
