--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   background-image:
-  linear-gradient(to bottom, rgba(20, 238, 38, 0.082), rgba(17, 68, 10, 0.205)),  
+  linear-gradient(to bottom, rgba(20, 238, 38, 0.082), rgba(17, 68, 10, 0.205)),
   url('https://images.unsplash.com/photo-1514192497895-875274f82835?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
   background-position: center;
   background-size: cover;
@@ -14,7 +14,7 @@
   opacity: 80%;
   font-family: $titles;
   font-weight: 1000;
-  font-size: 75px; 
+  font-size: 75px;
   padding-top: 15px;
   padding-left: 150px;
 }
@@ -25,7 +25,18 @@
   font-family: $titles;
   font-weight: 700;
   font-size: 60px;
-  padding-bottom: 90px; 
+  padding-bottom: 90px;
   line-height: 50px;
   padding-left: 150px;
+}
+
+.small-banner {
+  background-image:
+  linear-gradient(to bottom, rgba(20, 238, 38, 0.082), rgba(17, 68, 10, 0.205)),
+  url('https://images.unsplash.com/photo-1514192497895-875274f82835?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+  background-position: center;
+  background-size: cover;
+  height: 240px;
+  margin-top: 0;
+  padding-top: 0;
 }
