--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,25 +11,33 @@
     </div>
   </div>
 
-  
-  <div class="home-form-style"> 
-    <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-            <div class="form-inputs">
-              <%= f.input :email,
-                          required: false,
-                          autofocus: true,
-                          input_html: { autocomplete: "email" } %>
-              <%= f.input :password,
-                          required: false,
-                          input_html: { autocomplete: "current-password" } %>
-              <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
-            </div>
+  <% if user_signed_in? == false %>
+    <div class="home-form-style">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+              <div class="form-inputs">
+                <%= f.input :email,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "email" }%>
+                <%= f.input :password,
+                        required: true,
+                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password" } %>
+                <%= f.input :password_confirmation,
+                        required: true,
+                        input_html: { autocomplete: "new-password" } %>
+              </div>
 
-            <div class="form-actions btn btn-primary btn-block custombtn">
-              <%= f.button :submit, "Sign IN" %>
-            </div>
-    <% end %>
-  </div>
+              <div class="form-actions btn btn-primary btn-block custombtn">
+                <%= f.button :submit, "Sign Up" %>
+              </div>
+      <% end %>
+      <div class="btn btn-primary btn-block custombtn">
+        <%= link_to "Already have an account ? Sign in !", user_session_path%>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 
@@ -40,7 +48,7 @@
 
         <h2 class="d-flex justify-content-center">Log in</h2>
 
-        
+
         <div class="d-flex justify-content-center">
           <%= render "devise/shared/links" %>
         <%# </div>
