--- a/app/views/user_plants/new.html.erb
+++ b/app/views/user_plants/new.html.erb
@@ -5,8 +5,8 @@
 </form>
 
 <div class="container">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="https://images.unsplash.com/photo-1512428813834-c702c7702b78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Card image cap">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1512428813834-c702c7702b78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Plant Name</h5>
       <p class="card-text">Plant description</p>
@@ -15,3 +15,16 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8 offset-sm-2">
+      <div>
+        <% @api_plants.each do |api_plant| %>
+          <h4><%= api_plant.name %></h4>
+          <p><%= api_plant.family.name %></p>
+          <%# <%= api_plant.photo.key %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
