deleted code from new.html.erb user_plants

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,12 +2,13 @@
   background-color: $light-green;
   color: $white-green;
   border: 3px solid $light-green;
-  border-radius: 15px !important;
-  padding: 12px;
+  border-radius: 12px !important;
+  padding: 5px;
   text-decoration: none;
   cursor: pointer;
-  width: 200px !important;
-  font-size: 20px !important;
+  width: 110px !important;
+  height: 45px !important;
+  font-size: 12px !important;
   font-family: $links;
   text-align: center;
   margin-top: 2px;
@@ -27,12 +28,13 @@
   background-color: $mid-green;
   color: $white-green;
   border: 3px solid $mid-green;
-  border-radius: 15px !important;
+  border-radius: 12px !important;
   padding: 12px;
   text-decoration: none;
   cursor: pointer;
-  width: 200px !important;
-  font-size: 20px !important;
+  width: 110px !important;
+  height: 45px !important;
+  font-size: 12px !important;
   font-family: $links;
   text-align: center;
   margin-top: 2px;
@@ -52,12 +54,13 @@
 background-color: $white-green;
 color: $mid-green;
 border: 3px solid $light-green;
-border-radius: 15px !important;
-padding: 12px;
+border-radius: 12px !important;
+padding: 5px;
 text-decoration: none;
 cursor: pointer;
-width: 200px !important;
-font-size: 20px !important;
+width: 110px !important;
+height: 45px !important;
+font-size: 12px !important;
 font-family: $links;
 text-align: center;
 margin-top: 2px;
