--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "bulma/css/bulma.css";
+//@import "bulma/css/bulma.css";
 
 // Your CSS partials
 @import "components/index";
