--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,6 @@
 .myplantcard {
-  width:100%;
-  height: 600px;
+  width:90%;
+  height: 500px;
   margin: auto;
   border-radius: 6px;
   border: none;
@@ -11,7 +11,7 @@
   }
   img {
     height: 76%;
-    object-fit: fill;
+    object-fit: cover;
   }
 }
 
