--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -12,7 +12,7 @@
           <%= text_field_tag :query,
           params[:query],
           class: "form-control",
-          placeholder: "Find you plant"
+          placeholder: "Find your plant"
           %></div>
       <div><%= submit_tag "Search", class: "btn btn-primary" %></div>
       <% end %>
