--- a/app/views/user_plants/new.html.erb
+++ b/app/views/user_plants/new.html.erb
@@ -1,16 +1,20 @@
-<h1>Add new plant</h1>
-<form class="form-inline mr-auto">
-  <input class="form-control mr-sm-2" type="text" placeholder="Type your plant name" aria-label="Search">
-  <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
-</form>
+<div class="container mt-4 p-4">
+  <div class="d-flex flex-row bd-highlight justify-content-between">
+    <div class="m-4 bd-highlight"> <h1>Add new plant</h1></div>
+    <div class="m-4 bd-highlight flex-grow-1 ">
 
-<div class="container">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1512428813834-c702c7702b78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Plant Name</h5>
-      <p class="card-text">Plant description</p>
-      <a href="#" class="btn btn-primary">Add to my collection</a>
+    <!-- search form -->
+      <div class="d-flex ml-4">
+        <div class="flex-fill bd-highligh mr-2">
+          <%= form_tag new_user_plant_path, method: :get do %>
+            <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Find you plant"
+            %></div>
+            <div><%= submit_tag "Search", class: "btn btn-primary" %></div>
+          <% end %>
+      </div>
     </div>
   </div>
 </div>
@@ -23,6 +27,7 @@
           <h4><%= api_plant.name %></h4>
           <p><%= api_plant.family.name %></p>
           <%# <%= api_plant.photo.key %>
+          <a href="#">Add plant</a>
         <% end %>
       </div>
     </div>
