modified the path for searching a new plant to add to collection

--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container mt-4 p-4">
   <div class="d-flex flex-row bd-highlight justify-content-between">
     <div class="m-4 bd-highlight"> <h1>My catalogue</h1></div>
-    <div class="m-4 bd-highlight"><%= link_to "ADD A PLANT", new_user_plant_path, class: "btn mb-2" %></div>
+    <div class="m-4 bd-highlight"><%= link_to "ADD A PLANT", plants_path, class: "btn mb-2" %></div>
     <div class="m-4 bd-highlight flex-grow-1 ">
 
     <!-- search form -->
