added responsive size to cards and new button class

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-inverse {
 height: 80px;
 margin-bottom: 0px;
+background-color: $white-green;
 }
 
 .navbar-title {
@@ -13,6 +14,16 @@ margin-bottom: 0px;
   font-family: $links;
 }
 
+.navbar-links {
+  font-family: $links;
+}
+
+.plantsnavbar {
+  font-size: 12px;
+  border-radius: 90px;
+  height: 40px;
+}
+
 // .navbar-button {
 //   background: $dark-gray-green;
 //   color: $white-green;
@@ -23,16 +34,6 @@ margin-bottom: 0px;
 //   margin-bottom: 1px;
 //   border-radius: 1%;
 // }
-
-.navbar-links {
-  font-family: $links;
-}
-
-.plantsnavbar {
-  font-size: 12px;
-  border-radius: 90px;
-  height: 40px;
-}
 
 // .navbar-button:hover {
 //   background: $mid-green;
