--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,3 @@
 // Import page-specific CSS files here.
-@import "home";
-@import "user_plants_new";       
+@import "home";    
+@import "_add_plant";
