--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,3 +1,53 @@
 .modal-body {
   color: black;
 }
+
+.modal-content {
+  border-radius: 0px;
+  height: 416px;
+  margin: 0;
+  padding: 0;
+}
+
+.form-group.email {
+  width: -webkit-fill-available;
+}
+
+.form-group.password {
+  width: -webkit-fill-available;
+}
+
+#login-title-in-modal {
+  padding-bottom: 32px;
+}
+
+#submit-btn-modal {
+  background-color: $light-green;
+  color: $white-green;
+  border: 3px solid $light-green;
+  padding: 0px;
+  text-decoration: none;
+  cursor: pointer;
+  width: 432px !important;
+  font-size: 20px !important;
+  font-family: $links;
+  text-align: center;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  &:hover {
+    background-color: $white-green;
+    border: 3px solid $light-green;
+    color: $light-gray-green;
+    transition-duration: 0.4s;
+    text-decoration: none;
+  }
+}
+
+#password-recovery-btn-modal {
+  margin-top: 16px;
+  &:hover {
+    text-decoration: underline;
+  }
+}
