--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,6 @@
 .myplantcard {
-  width:90%;
-  height: 500px;
+  width: 100%;
+  height: 600px;
   margin: auto;
   border-radius: 6px;
   border: none;
@@ -29,6 +29,7 @@
   padding: 15px;
   border-radius: 6px;
   width: 90%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   &:hover {
     text-decoration: none !important;
   }
