--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,5 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "_add_plant";
+@import "add_plant";
 @import "user_plant_show";
+@import "confirm_plant";
