--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -28,7 +28,8 @@
   padding: 15px;
   border-radius: 6px;
   width: 90%;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: -5px -5px 20px 2px rgba(0,0,0,0.1);
+
   &:hover {
     text-decoration: none !important;
   }
