added bannner picture to search bar

--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,7 +1,7 @@
 <div class="search-container">
   <div class="container mt-4 p-4">
     <div class="d-flex flex-row bd-highlight justify-content-between">
-      <div class="m-4 bd-highlight"> <h1>Add a new plant</h1></div>
+      <div class="m-4 bd-highlight"> <h1 class="add-plant-slogan-text-1">Add a plant</h1></div>
       <div class="m-4 bd-highlight flex-grow-1 ">
 
       <!-- search form -->
