--- a/app/assets/stylesheets/pages/_add_plant.scss
+++ b/app/assets/stylesheets/pages/_add_plant.scss
@@ -1,6 +1,9 @@
+
 .myplantcard-add-plant {
   width:90%;
   height: 420px;
+  background-color: $white-green;
+  box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
   margin: auto;
   border-radius: 6px;
   border: none !important;
@@ -46,10 +49,22 @@
 
 }
 
+.add-plant-slogan-text-1 {
+  color:rgb(255, 255, 255);
+  opacity: 80%;
+  font-family: $titles;
+  font-weight: 1000;
+  font-size: 75px;
+  padding-left: 5px;
+}
+
 .search-container {
-  background-color: $light-gray-green;
+  background-image:
+  linear-gradient(to bottom, rgba(183, 216, 185, 0.137), rgba(131, 184, 131, 0.164)),
+  url('https://images.unsplash.com/photo-1524116458090-9521cd04f38d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=634&q=80');
+  background-position: center;
+  background-size: cover;
+  height: 140px;
   box-shadow: 2px 2.2px 2.2px $dark-gray-green;
-  width: 99%;
   margin-bottom: 50px;
-  margin-left: 5px;
 }
