--- a/app/views/user_plants/show.html.erb
+++ b/app/views/user_plants/show.html.erb
@@ -13,60 +13,51 @@
   <div class="row no-gutters">
     <div class="col-sm-4">
       <div class="d-flex flex-column bd-highlight">
-        <div class="bd-highlight p-4 m-4">
-          <h1 class="text-center" id="anchor"> <strong><%= @user_plant.nickname %></strong> </h1>
-        </div>
-        <div class="bd-highlight">
-          <div class="card reminders-big-card">
-          <h4 class="text-center mt-2">MY REMINDERS</h4><br>
-        <div class="notifications-list">
-
-          <% @reminders.each do |reminder| %>
-            <div class="d-flex flex-row bd-highlight mb-3">
-              <div class="p-2 bd-highlight"><p> <%= reminder.category%> </p></div>
-              <div class="p-2 bd-highlight">
+        <div class="bd-highlight p-4 m-4"><h1 class="text-center" id="anchor"> <strong><%= @user_plant.nickname %></strong> </h1></div>
+          <div class="bd-highlight">
+            <div class="card reminders-big-card">
+              <h4 class="text-center mt-2">MY REMINDERS</h4><br>
+                <% @reminders.each do |reminder| %>
+              <div class="d-flex flex-row bd-highlight mb-3">
+                <p> <%= reminder.category%> </p>
                 <% if reminder.active %>
-                <%= simple_form_for [ @user_plant, reminder ] do |f| %>
-                  <%= f.input :start_date, as: :date, html5: true, label: false%>
-                  <div class="custom-control custom-switch">
-                    <%= f.check_box :active, class:"custom-control-input", id: "customSwitch1"%>
-                    <label class="custom-control-label" for="customSwitch1"> </label>
-                  </div>
-                  <%= f.submit :disable, as: :hidden, id: "toggle_btn"%>
+                    <%= simple_form_for [ @user_plant, reminder ] do |f| %>
+                      <div class="d-flex">
+                        <%= f.input :start_date, as: :date, html5: true, label: false %>
+                        <div class="custom-control custom-switch">
+                          <%= f.check_box :active, class:"custom-control-input toggles", id: "customSwitch#{reminder.id}", :data => reminder.id %>
+                          <label class="custom-control-label" for="customSwitch<%= reminder.id %>"> </label>
+                        </div>
+                        <%= f.submit :disable, as: :hidden, id: "toggle_btn"%>
+                      </div>
+                    <% end %>
+                <% else %>
+                    <%= simple_form_for [ @user_plant, reminder ] do |f| %>
+                      <div class="d-flex">
+                        <%= f.input :start_date , as: :date, html5: true, disabled: !reminder.active, label: false%>
+                          <div class="custom-control custom-switch">
+                            <%= f.check_box :active, class:"custom-control-input toggles", id: "customSwitch#{reminder.id}"%>
+                            <label class="custom-control-label disabled" for="customSwitch<%= reminder.id %>"> </label>
+                          </div>
+                        <%= f.submit :enable, as: :hidden, id: "toggle_btn"%>
+                      </div>
+                    <% end %>
                 <% end %>
-              <% else %>
-                <%= simple_form_for [ @user_plant, reminder ] do |f| %>
-                  <%= f.input :start_date , as: :date, html5: true, disabled: !reminder.active, label: false%>
-                  <div class="custom-control custom-switch">
-                    <%= f.check_box :active, class:"custom-control-input", id: "customSwitch1"%>
-                    <label class="custom-control-label disabled" for="customSwitch1"> </label>
-                  </div>
-                  <%= f.submit :enable, as: :hidden, id: "toggle_btn"%>
-                <% end %>
-              <% end %>
               </div>
+                <% end %>
             </div>
-          <% end %>
-        </div>
-
-
-        </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-sm-8">
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="container m-4 p-4">
-        <h2>First Part of plant detailled info</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dapibus lacus sit amet arcu pharetra, quis pretium magna lobortis. Nulla eget sollicitudin ligula. Ut quis sodales tellus, ut sodales justo. Nam sit amet mi et arcu luctus pellentesque. Aenean metus justo, faucibus quis convallis non, pharetra at elit. Praesent eget vulputate libero. In ornare odio id leo mattis, eu tincidunt urna euismod. Nulla egestas orci a lorem pretium feugiat. Curabitur luctus lacinia erat, et vulputate justo blandit id. Vestibulum in nunc magna.</p>
-        <br>
-        <h2>Another section of plant detailled info</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dapibus lacus sit amet arcu pharetra, quis pretium magna lobortis. Nulla eget sollicitudin ligula. Ut quis sodales tellus, ut sodales justo. Nam sit amet mi et arcu luctus pellentesque. Aenean metus justo, faucibus quis convallis non, pharetra at elit. Praesent eget vulputate libero. In ornare odio id leo mattis, eu tincidunt urna euismod. Nulla egestas orci a lorem pretium feugiat. Curabitur luctus lacinia erat, et vulputate justo blandit id. Vestibulum in nunc magna.</p>
-      </div>
+    <div class="col-sm-8"><br><br><br><br>
+        <div class="container m-4 p-4">
+          <h2>Description about your plant:</h2>
+          <p>Green plants obtain most of their energy from sunlight via photosynthesis by primary chloroplasts that are derived from endosymbiosis with cyanobacteria. Their chloroplasts contain chlorophylls a and b, which gives them their green color. Some plants are parasitic or mycotrophic and have lost the ability to produce normal amounts of chlorophyll or to photosynthesize, but still have flowers, fruits, and seeds. Plants are characterized by sexual reproduction and alternation of generations, although asexual reproduction is also common.</p>
+          <br>
+          <h2>Another section of plant detailled info</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dapibus lacus sit amet arcu pharetra, quis pretium magna lobortis. Nulla eget sollicitudin ligula. Ut quis sodales tellus, ut sodales justo. Nam sit amet mi et arcu luctus pellentesque. Aenean metus justo, faucibus quis convallis non, pharetra at elit. Praesent eget vulputate libero. In ornare odio id leo mattis, eu tincidunt urna euismod. Nulla egestas orci a lorem pretium feugiat. Curabitur luctus lacinia erat, et vulputate justo blandit id. Vestibulum in nunc magna.</p>
+        </div>
     </div>
   </div>
 </div>
