--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -24,7 +24,7 @@
 <div class="container">
   <div class="row">
     <% @user_plants.each do |plant| %>
-       <div class="col-4 mb-4">
+      <div class="col-4 mb-4">
         <%= link_to plant, class: "card_link" do %>
           <div class="card myplantcard">
             <% if plant.photo.present?  %>
@@ -37,13 +37,13 @@
                 <div class="bd-highlight mr-2"><i class="fas fa-tint">  Every <%= plant.plant.water_frequency %> days</i></div>
                 <div class="bd-highlight"><i class="fas fa-sun">  <%= plant.plant.light_frequency %>h/day</i></div>
               </div>
+              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn btn-info", onclick:"event.stopPropagation(); confirm('Do not let this happen next time!')" %>
             </div>
           </div>
         <% end %>
-        </div>
+
+      </div>
     <% end %>
   </div>
 </div>
-
-
 
